# AIDS2

./: pyproject.toml
.github/workflows/: ci.yml
AIDS2/: .gitignore  boyer_moore.py  grafy_reprezentacje.py  integracja.py  prezentacja.md  prezentacja_obrona.pptx  pyproject.toml  wizualizacja.py
AIDS2/.github/workflows/: ci.yml
AIDS2/raporty/: raport_testow.md
AIDS2/snowwhite_suite/: __init__.py  modele.py  modul1_mcmf.py  modul2_hull.py  modul3_rmq.py  modul4_huffman.py  modul4_trie.py
AIDS2/testy/: __init__.py  generator.py  test_modul1.py  test_modul2.py  test_modul3.py  test_modul4.py
AIDS2/wizualizacja-app/: README.md  index.html  package.json
AIDS2/wizualizacja-app/src/: App.jsx
snowwhite_suite/: modele.py  modul2_hull.py  modul4_huffman.py
testy/: test_modul2.py  test_modul3.py  test_modul4.py
