[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowwhite_suite"
version = "0.1.0"
description = "Zintegrowany system optymalizacji pracy Królestwa Krasnoludków"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.5"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
include = ["snowwhite_suite*"]

[tool.mypy]
strict = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88